Epiphany Tech Preview should use a custom app ID to coexist with system Epiphany
In Fedora (at least), installing Epiphany Tech Preview from flatpak replaces the icons in GNOME Shell instead of co-existing with the system version of Epiphany.
Ideally, there would be icons for Web and Web (Epiphany Tech Preview) so that a user can have both and pick the one they want to run.
Edited by Michael Catanzaro