Enable co-existing of Epiphany Tech Preview with stable version

Fixes: https://gitlab.gnome.org/GNOME/epiphany/issues/20